# opsforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  alembic.ini  docker-compose.yml  pyproject.toml
.context/retros/: 2026-06-27-1.json
.github/workflows/: ci.yml
corpus/service-health-triage/: monitoring-false-alert-guide.md  service-health-triage-runbook.md
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  AS-BUILT-ARCHITECTURE.md
evals/: characterize_detector.py  heuristic_gateway.py  run_evals.py  run_knowledge_evals.py
evals/knowledge/: confidence.yaml  contradiction.yaml  precedence.yaml
evals/scorecards/: detector_characterization.json  knowledge_baseline.json  knowledge_baseline.md  knowledge_production.json  knowledge_production.md
itil-test-corpus/: README.md  RESULTS.md  change-management-process.md  escalation-matrix.md  incident-management-process-v2.md  incident-management-runbook-2026.md  priority-classification-policy.md
mappings/: jira.yaml  pagerduty.yaml  servicenow.yaml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_graph_dedup.py  0003_ops_connector_fields.py  0004_jobs_org_rls.py  0005_knowledge_chunks.py  0006_process_dispositions.py  0007_findings.py  0008_validated_processes.py  0009_app_role.py  0010_rls_nullif.py  0011_process_coverage.py  0012_provenance_root.py  0013_reconciliations.py  0014_chunk_origin.py  0015_llm_providers.py  0016_connectors_rls.py  0017_confluence_kind.py  0028_orgs.py  (+18 more)
scripts/: a15_live_proof.py  a2_live_proof.py  m72_live_proof.py  m74_live_proof.py  m75_live_proof.py  m76_live_proof.py  slice1_caseC_probe.py  slice1_live_proof.py  slice2_live_proof.py
tests/: conftest.py  test_actions_executor.py  test_agent_eval.py  test_audit_and_spa.py  test_catalog.py  test_chat.py  test_confidence.py  test_confluence_connector.py  test_confluence_source.py  test_connector_config.py  test_connector_mapping.py  test_connectors_graph.py  test_connectors_rls.py  test_consequential_boundary.py  test_conversations_api.py  test_corroboration_disjoint.py  test_credentials.py  test_db_role.py  test_detector_swap.py  test_dispositions.py  test_drafter.py  test_findings.py  test_gap3_and_install.py  test_graduation_subagents.py  test_grounding_gate.py  test_guc_isolation.py  test_healthz.py  test_jobs_rls.py  test_knowledge_api.py  test_knowledge_evals.py  test_knowledge_ingest.py  test_knowledge_tools.py  test_llm_containment.py  test_llm_providers.py  test_models_metadata.py  test_mvp_alert_to_slack.py  test_nl_resolver.py  test_ops_model.py  test_orgs_api.py  test_phase3_smoke.py  (+18 more)
workbench/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
(+119 files in other folders)
